sites/navy/clusters/dal-navy-core-1/wave-5/overlays/dolores-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: dolores-web
    app.kubernetes.io/name: dolores-web
  name: dolores-web
  namespace: dolores-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: dolores-web
    app.kubernetes.io/name: dolores-web
